terraform/vpc.tf
## VPC Resources
resource "aws_vpc" "vpc" {
  cidr_block = "10.0.0.0/16"
  enable_dns_support = true
  enable_dns_hostnames = true

  tags = {
    Name = "${var.app_name}-vpc"
  }
}

resource "aws_subnet" "public_subnet_1" {
  vpc_id            = aws_vpc.vpc.id
  cidr_block        = "10.0.1.0/24"
  availability_zone = "us-east-1a"  # Change as needed

  tags = {
    Name = "PublicSubnet1"
  }
}

resource "aws_subnet" "public_subnet_2" {
  vpc_id            = aws_vpc.vpc.id
  cidr_block        = "10.0.2.0/24"
  availability_zone = "us-east-1b"  # Change as needed

  tags = {
    Name = "PublicSubnet2"
  }
}

# resource "aws_subnet" "private_subnet_1" {
#   vpc_id            = aws_vpc.vpc.id
#   cidr_block        = "10.0.3.0/24"
#   availability_zone = "us-east-1c"  # Change as needed

#   tags = {
#     Name = "PrivateSubnet1"
#   }
# }

# resource "aws_subnet" "private_subnet_2" {
#   vpc_id            = aws_vpc.vpc.id
#   cidr_block        = "10.0.4.0/24"
#   availability_zone = "us-east-1d"  # Change as needed

#   tags = {
#     Name = "PrivateSubnet2"
#   }
# }

resource "aws_internet_gateway" "igw" {
  vpc_id = aws_vpc.vpc.id

  tags = {
    Name = "${var.app_name}-igw"
  }
}

resource "aws_route_table" "public_route_table" {
  vpc_id = aws_vpc.vpc.id

  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.igw.id
  }

  tags = {
    Name = "${var.app_name}-pub-rt"
  }
}

resource "aws_route_table_association" "public_subnet_1_association" {
  subnet_id      = aws_subnet.public_subnet_1.id
  route_table_id = aws_route_table.public_route_table.id
}

resource "aws_route_table_association" "public_subnet_2_association" {
  subnet_id      = aws_subnet.public_subnet_2.id
  route_table_id = aws_route_table.public_route_table.id
}

# resource "aws_nat_gateway" "nat" {
#   allocation_id = aws_eip.nat_eip.id
#   subnet_id    = aws_subnet.public_subnet_1.id

#   tags = {
#     Name = "${var.app_name}-ngw"
#   }
# }

# resource "aws_eip" "nat_eip" {
#   tags = {
#     Name = "${var.app_name}-nat-eip"
#   }
# }

# resource "aws_route_table" "private_route_table" {
#   vpc_id = aws_vpc.vpc.id

#   route {
#     cidr_block = "0.0.0.0/0"
#     nat_gateway_id = aws_nat_gateway.nat.id
#   }

#   tags = {
#     Name = "${var.app_name}-priv-rt"
#   }
# }

# resource "aws_route_table_association" "private_subnet_1_association" {
#   subnet_id      = aws_subnet.private_subnet_1.id
#   route_table_id = aws_route_table.private_route_table.id
# }

# resource "aws_route_table_association" "private_subnet_2_association" {
#   subnet_id      = aws_subnet.private_subnet_2.id
#   route_table_id = aws_route_table.private_route_table.id
# }

resource "aws_security_group" "lambda_sg" {
  name   = "${var.app_name}-lambda-sg"
  vpc_id = aws_vpc.vpc.id

    ingress {
        from_port       = 0
        to_port         = 65535
        protocol        = "tcp"
        cidr_blocks     = ["10.0.0.0/16"]  # Replace with your VPC CIDR block
    }
    ingress {
        from_port       = 0
        to_port         = 65535
        protocol        = "tcp"
        self            = true  # Allow traffic from the same security group
    }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"  # All traffic
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "LambdaSecurityGroup"
  }
}
